--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,10 +1,53 @@
 @import './base.css';
 
 #app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  font-weight: normal;
+  border: 0px;
+  width: 100%;
+  font-family: Avenir, Helvetica, Arial, sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.icon {
+  height: 32px;
+}
+
+#top-bar {
+  background-color: #335076;
+  color: white;
+  padding-left: 150px;
+  width: 100%;
+  height: 80px;
+  align-content: center; /* align content along y-axis */
+  /* other styles for top bar */
+}
+
+#content-wrapper {
+  display: flex;
+}
+
+#nav {
+  padding: 0px;
+  background-color: #335076;
+  width: 100px;
+  display: flex;
+  flex-direction: column;
+  height: calc(100vh - 50px); /* Subtract the top bar height */
+}
+
+#nav a {
+  font-weight: bold;
+  color: white;
+  padding: 20%;
+  text-align: center;
+}
+
+.router-link {
+  padding: 50px;
+}
+
+.router-view {
+  padding-left: 50px;
 }
 
 a,
@@ -15,9 +58,14 @@ a,
   padding: 3px;
 }
 
+#nav a.router-link-exact-active {
+  color: white;
+  background-color: #142c49;
+}
+
 @media (hover: hover) {
   a:hover {
-    background-color: #929EAF;
+    background-color: #5B789F;
   }
 }
 
