--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -2,6 +2,7 @@
 
 body {
   margin: 0px;
+  background-color: #98c4e8;
 }
 
 #app {
@@ -10,6 +11,7 @@ body {
   font-family: Avenir, Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  display: flex;
 }
 
 .icon {
@@ -23,27 +25,29 @@ body {
 }
 
 #top-bar {
+  position: fixed;
   display: flex;
   background-color: #335076;
   color: white;
   padding-left: 150px;
   width: 100%;
   height: 80px;
-  align-content: center; /* align content along y-axis */
-  /* other styles for top bar */
+  align-content: center;
 }
 
-#content-wrapper {
-  display: flex;
+#main {
+  margin-top: 80px;
 }
 
 #nav {
+  position: fixed;
   padding: 0px;
   background-color: #335076;
-  width: 100px;
   display: flex;
   flex-direction: column;
-  height: calc(100vh - 80px); /* Subtract the top bar height */
+  height: 100%;
+  overflow-y: scroll;
+  scrollbar-color: #5B789F #82afd3;
 }
 
 #nav a {
@@ -53,12 +57,13 @@ body {
   text-align: center;
 }
 
-.router-link {
-  padding: 50px;
+#content {
+  margin-left: 100px;
+  padding: 0 50px;
 }
 
-.router-view {
-  padding-left: 50px;
+.router-link {
+  padding: 50px;
 }
 
 a,
