--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -46,7 +46,7 @@ body {
   display: flex;
   flex-direction: column;
   height: 100%;
-  overflow-y: scroll;
+  overflow-y: auto;
   scrollbar-color: #5B789F #82afd3;
 }
 
@@ -58,6 +58,8 @@ body {
 }
 
 #content {
+  display: flex;
+  justify-content: flex-end;
   margin-left: 100px;
   padding: 0 50px;
 }
