--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -14,7 +14,7 @@ body {
 #topBar {
   position: fixed;
   display: flex;
-  background-color: #335076;
+  background-color: white;
   color: white;
   padding-left: 120px;
   height: 80px;
