Added delete WorkoutContainer functionality and Error handling
- Users now can delete the WorkoutContainers corresponding to the different routines
- Error handling: Added alerts to notify users if they try to "Add Exercise" or "Save Routine" without filling up all the required fields

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -81,6 +81,15 @@ body {
   padding: 50px;
 }
 
+.clickable-img-wrapper {
+  display: inline-block;
+  transition: transform .2s; /* Animation */
+}
+
+.clickable-img-wrapper:hover {
+  transform: scale(1.5);
+}
+
 a,
 .green {
   text-decoration: none;
